--- a/444.htm
+++ b/444.htm
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div id="head">
-        <a href="мой сайт.htm" class="a">Центр Севастополя</a>
+        <a href="index.htm" class="a">Центр Севастополя</a>
     </div>
     <div id="navigate">
         <table class="navi" width="100%" align="center">
