--- a/222.htm
+++ b/222.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Центр Севастополя: площадь Лазарева</title>
+    <title>Центр Севастополя: площадь Суворова</title>
     <link rel="stylesheet" href="site.css">
 </head>
 <body>
