--- a/444.htm
+++ b/444.htm
@@ -19,7 +19,7 @@
     </div>
     <div class="text">
         <h1>ПЛОЩАДЬ ЛАЗАРЕВА</h1>
-        <img src="444-1.jpg" class="rightimg" width="411" height="248" title="Вид на площадь Ушакова">
+        <img src="444-1.jpg" class="rightimg" width="411" height="248" title="Вид на площадь Лазарева">
         <p><strong>Площадь Лазарева</strong> — одна из центральных площадей Севастополя, часть Центрального городского кольца. Находится в
         Ленинском районе города, от неё начинаются проспект Нахимова, улицы Большая Морская, Генерала Петрова, Маяковского, Воронина и
         спуск Шестакова. Форма площади треугольная. Застроена жилыми домами и зданием общественного назначения в едином архитектурном стиле
@@ -46,7 +46,7 @@
          художественной и исторической ценности.</p>
         <p>Здания ансамбля выполнены из белого инкерманского камня. Они имеют характерные для «сталинского ампира» башенки с колоннами на
         крышах. Весь комплекс был отреставрирован и стены обрели первозданный светлый тон.</p>
-        <p>Самое приметное здание на площади принадлежит конструкторскому <em>бюро «Черноморец»</em>. В его нише в 1996 г. был установлен памятник
+        <p>Самое приметное здание на площади принадлежит <em>конструкторскому бюро «Черноморец»</em>. В его нише в 1996 г. был установлен памятник
         М.П. Лазареву – бюст на высоком постаменте. За основу изображения скульпторы Лысенко взяли знаменитый портрет адмирала работы Карла
         Брюллова. В организации установки памятника участвовало представительство республики Татарстан в Севастополе.</p>
         </div>
