--- a/333.htm
+++ b/333.htm
@@ -2,6 +2,7 @@
 <head>
     <title>Центр Севастополя: площадь Нахимова</title>
     <link rel="stylesheet" href="site.css">
+    <script type="text/javascript" src="java.js"></script>
 </head>
 <body>
     <div id="head">
@@ -48,11 +49,13 @@
         хотели показать два знаменитых победоносных сражения и одно трагическое поражение.</p>
         <p>Рядом с мемориалом располагается чаша Вечного огня. В правой стороне от мемориала установлены каменные плиты, на которых высечены
         фамилии 54 героев обороны Севастополя. Здеь несут почетный караул и Поста № 1 старшеклассники, которые переодеваются в морскую униформу.</p>
-        <h2>Видео</h2>
+        <a href="#" class="link" onclick="show('vid');return false;"><h2>Видео</h2></a>
         </div>
+        <div id="vid" class="video">
         <center>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/c1Fkek-uZf0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </center>
+        </div>
         <div class="bottom">
             Работа Мовенко Константина
             </div>
