--- a/111.htm
+++ b/111.htm
@@ -2,6 +2,7 @@
 <head>
     <title>Центр Севастополя: площадь Ушакова</title>
     <link rel="stylesheet" href="site.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="head">
