--- a/333.htm
+++ b/333.htm
@@ -3,6 +3,7 @@
     <title>Центр Севастополя: площадь Нахимова</title>
     <link rel="stylesheet" href="site.css">
     <script type="text/javascript" src="java.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="head">
